--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: localhost
+- hosts: all
   remote_user: root
   roles:
-    - ansible-role-kubernetes
+    - role: ansible-role-kubernetes
+      # Can't test admin/development as kubeadm requires systemd to install
+      kubernetes_node_type: master
