--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,6 @@
 ---
-# vars file for ansible-role-kubernetes
+# Supported node types
+kubernetes_supported_node_type:
+  - worker
+  - master
+  - admin
