--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,45 @@
 ---
 language: python
-python: "2.7"
+python: '2.7'
 
-# Use the new container infrastructure
-sudo: false
+# Spin off separate builds for each of the following versions of Ansible
+env:
+- ANSIBLE_VERSION=2.0.1
+- ANSIBLE_VERSION=2.1.1
 
-# Install ansible
-addons:
-  apt:
-    packages:
-    - python-pip
+# Require the standard build environment
+sudo: required
+
+# Require Ubuntu 14.04
+dist: trusty
+
+# Require Docker
+services:
+  - docker
+
+# Cache Ansible and Molecule to speed things up
+cache:
+  - pip
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -o Dpkg::Options::='--force-confold' --force-yes -y docker-engine
 
 install:
-  # Install ansible
-  - pip install ansible
+  # Install Ansible
+  - pip install "ansible~=$ANSIBLE_VERSION"
 
-  # Check ansible version
+  # Install Molecule
+  - pip install 'molecule==1.11.1'
+
+  # Check Ansible version
   - ansible --version
 
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  # Check Molecule version
+  - molecule --version
 
 script:
-  # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
