--- a/molecule.yml
+++ b/molecule.yml
@@ -1,15 +1,9 @@
 ---
+ansible:
+  playbook: tests/test.yml
+
 docker:
   containers:
-
-      - name: ansible-role-kubernetes-01
-        image: ubuntu
-        image_version: latest
-        ansible_groups:
-          - group1
-
-      - name: ansible-role-kubernetes-02
-        image: ubuntu
-        image_version: latest
-        ansible_groups:
-          - group1
+    - name: ansible-role-kubernetes-ubuntu-xenial
+      image: ubuntu
+      image_version: '16.04'
