--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,35 +23,4 @@
     repo: 'deb http://apt.kubernetes.io/ kubernetes-xenial main'
     state: present
 
-- name: install kubernetes (worker)
-  become: yes
-  apt:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - kubelet
-    - kubernetes-cni
-  when: kubernetes_node_type == 'worker'
-
-- name: install kubernetes (master)
-  become: yes
-  apt:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - kubelet
-    - kubectl
-    - kubernetes-cni
-  when: kubernetes_node_type == 'master'
-
-- name: install kubernetes (admin)
-  become: yes
-  apt:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - kubelet
-    - kubectl
-    - kubeadm
-    - kubernetes-cni
-  when: kubernetes_node_type == 'admin'
+- include_tasks: '{{ kubernetes_node_type }}.yml'
