--- a/molecule/master-ubuntu-min/molecule.yml
+++ b/molecule/master-ubuntu-min/molecule.yml
@@ -9,18 +9,21 @@ lint:
   name: yamllint
 
 platforms:
-  - name: ansible-role-kubernetes-ubuntu-default
+  - name: ansible-role-kubernetes-ubuntu-min
     image: ubuntu:16.04
 
 provisioner:
   name: ansible
+  playbooks:
+    converge: ../default/playbook.yml
   lint:
     name: ansible-lint
 
 scenario:
-  name: default
+  name: master-ubuntu-min
 
 verifier:
   name: testinfra
+  directory: ../default/tests
   lint:
     name: flake8
