Added controller type
If you just want to install `kubectl`.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 # Node type: determines what features are installed.
+# - controller:
+#     - kubectl
 # - worker:
 #     - kubelet
 #     - kubernetes-cni
