Resolved apt module syntax deprecation warning
```
[DEPRECATION WARNING]: Invoking "apt" only once while using a loop via
squash_actions is deprecated. Instead of using a loop to supply multiple items
and specifying `name: {{ item }}`, please use `name: [u'kubelet', u'kubectl', u
'kubernetes-cni']` and remove the loop. This feature will be removed in version
 2.11. Deprecation warnings can be disabled by setting
deprecation_warnings=False in ansible.cfg.
```

--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -2,11 +2,10 @@
 - name: install kubernetes (admin)
   become: yes
   apt:
-    name: '{{ item }}'
+    name:
+      - kubelet
+      - kubectl
+      - kubeadm
+      - kubernetes-cni
     state: present
-  with_items:
-    - kubelet
-    - kubectl
-    - kubeadm
-    - kubernetes-cni
   when: kubernetes_node_type == 'admin'
