--- a/molecule/master-ubuntu-min/molecule.yml
+++ b/molecule/master-ubuntu-min/molecule.yml
@@ -11,6 +11,7 @@ lint:
 platforms:
   - name: ansible-role-kubernetes-master-ubuntu-min
     image: ubuntu:16.04
+    dockerfile: ../default/Dockerfile.j2
 
 provisioner:
   name: ansible
