--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
           - controller-ubuntu-min
           - master-ubuntu-max
         include:
-          - ansible-version: '2.9.1'
+          - ansible-version: '2.10.7' # max-ansible-test-version
             molecule-scenario: controller-ubuntu-max
-          - ansible-version: '2.9.1'
+          - ansible-version: '2.10.7' # max-ansible-test-version
             molecule-scenario: master-ubuntu-min
 
     env:
