Fixes for ansible-lint warnings
To help with Molecule version upgrade.

--- a/tasks/admin.yml
+++ b/tasks/admin.yml
@@ -1,7 +1,8 @@
+# code: language=ansible
 ---
-- name: install kubernetes (admin)
-  become: yes
-  apt:
+- name: Install kubernetes (admin)
+  become: true
+  ansible.builtin.apt:
     name:
       - kubelet
       - kubectl
