--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,10 +3,10 @@
   hosts: all
 
   pre_tasks:
-    - name: update apt cache
-      apt:
-        update_cache: yes
-      changed_when: no
+    - name: Update apt cache
+      ansible.builtin.apt:
+        update_cache: true
+      changed_when: false
 
   roles:
     - role: ansible-role-kubernetes
