--- a/tasks/master.yml
+++ b/tasks/master.yml
@@ -1,7 +1,8 @@
+# code: language=ansible
 ---
-- name: install kubernetes (master)
-  become: yes
-  apt:
+- name: Install kubernetes (master)
+  become: true
+  ansible.builtin.apt:
     name:
       - kubelet
       - kubectl
