--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -1,7 +1,8 @@
+# code: language=ansible
 ---
-- name: install kubernetes (worker)
-  become: yes
-  apt:
+- name: Install kubernetes (worker)
+  become: true
+  ansible.builtin.apt:
     name:
       - kubelet
       - kubernetes-cni
