--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,19 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+
 # Files with a smaller indent
 [*.{md,yml}]
+indent_size = 2
+
+# Ansible Lint
+[.ansible-lint]
 indent_size = 2
 
 # Jinja2 template files
 [*.j2]
 end_of_line = lf
+
+# Devcontainer config
+[devcontainer.json]
+indent_style = tab
